# Imgui_Android

./: .gitmodules  README.md  settings.gradle
ImguiDemoSdl/: build.gradle
ImguiDemoSdl/src/androidTest/java/me/sfalexrog/imguidemo/: ExampleInstrumentedTest.java
ImguiDemoSdl/src/main/: AndroidManifest.xml
ImguiDemoSdl/src/main/cpp/: CMakeLists.txt
ImguiDemoSdl/src/main/cpp/cmake/: FindSDL2.cmake
ImguiDemoSdl/src/main/cpp/data/: imgui.ini
ImguiDemoSdl/src/main/cpp/src/: main.cpp  teapot.cpp  teapot.h
ImguiDemoSdl/src/main/cpp/src/glload/: gl_glcore_3_3.c  gl_glcore_3_3.h
ImguiDemoSdl/src/main/cpp/src/imgui_impl/: imgui_impl_sdl_es2.cpp  imgui_impl_sdl_es2.h  imgui_impl_sdl_es3.cpp  imgui_impl_sdl_es3.h  imgui_impl_sdl_gl3.cpp  imgui_impl_sdl_gl3.h
ImguiDemoSdl/src/main/java/me/sfalexrog/imguidemo/: DemoActivity.java
ImguiDemoSdl/src/main/res/values/: strings.xml
ImguiDemoSdl/src/test/java/me/sfalexrog/imguidemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
